--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -63,6 +63,11 @@
         <div class="col-lg-12 text-center">
           <h1 class="mt-5">A Bootstrap 4 Starter Template</h1>
           <p class="lead">Complete with pre-defined file paths and responsive navigation!</p>
+
+          <form enctype="multipart/form-data" action="http://127.0.0.1:8080/upload" method="post">
+            <input type="file" name="uploadfile" />
+            <input type="hidden" name="token" value="{{.}}"/>
+            <input type="submit" value="upload" />
           <ul class="list-unstyled">
             <li>Bootstrap 4.0.0</li>
             <li>jQuery 3.3.0</li>
