--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -32,7 +32,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Start Bootstrap</a>
+        <a class="navbar-brand" href="#">FirmScan</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -61,17 +61,18 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h1 class="mt-5">A Bootstrap 4 Starter Template</h1>
-          <p class="lead">Complete with pre-defined file paths and responsive navigation!</p>
+          <h1 class="mt-5">FirmScan</h1>
+          <p class="lead">An automated vulnerbility scanner for firmware images.</p>
+          <p class="lead">Upload your firmware and start inpsecting</p>
 
           <form enctype="multipart/form-data" action="http://127.0.0.1:8080/upload" method="post">
             <input type="file" name="uploadfile" />
             <input type="hidden" name="token" value="{{.}}"/>
             <input type="submit" value="upload" />
-          <ul class="list-unstyled">
-            <li>Bootstrap 4.0.0</li>
-            <li>jQuery 3.3.0</li>
-          </ul>
+
+            <br>
+            <br>
+            <p class="lead">Built for Copenhacks 2018</p>
         </div>
       </div>
     </div>
